--- a/0-PROJECTS/project_1/wiki/encyclopedia/templates/encyclopedia/new_pg.html
+++ b/0-PROJECTS/project_1/wiki/encyclopedia/templates/encyclopedia/new_pg.html
@@ -36,7 +36,7 @@
         </div>
     
         <div class="mb-3">
-            <label for="FormControlTextarea1" class="form-label"><h4>New Content Markdown</h4></label>
+            <label for="FormControlTextarea1" class="form-label"><h4>Write a New Markdown</h4></label>
             <textarea class="form-control" id="FormControlTextarea1" name="FormControlTextarea1" style="height: 200px;" placeholder="Insert Markdown Here!"></textarea>
         </div>
     
