--- a/0-PROJECTS/project_1/wiki/encyclopedia/templates/encyclopedia/titles.html
+++ b/0-PROJECTS/project_1/wiki/encyclopedia/templates/encyclopedia/titles.html
@@ -6,8 +6,59 @@
 
 {% block body %}
 
-   <div>
-      {{content|safe}}
+{% if messages %}
+<div class="messages-container" id="message-callback">
+    {% for message in messages %}
+        {% if message %}
+            <div class="row">
+                <div class="col-12 p-0">
+                    <div class="alert mb-0 mt-2 alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                        <div class="d-flex justify-content-between">
+                            <b>{{ message|safe }}</b>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+    {% endfor %}
+</div>
+{% endif %}
+
+<div class="row">
+
+   <div class="mb-6 ">
+      <div name="title_content">{{content|safe}}</div>
    </div>
+   
+   <div class="mb-6">
+      <form class="form-label" method="POST" >
+          {% csrf_token %}
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Edit Content
+          </button>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Write New Content</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                          <div class="mb-3">
+                              <textarea class="form-control" id="FormControlTextarea1" name="FormControlTextarea1" style="height: 200px;" placeholder="Insert Markdown Here!"></textarea>
+                          </div>
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <button type="submit" class="btn btn-primary">Save changes</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div> 
 
 {% endblock %}
